--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "astro": "^5.10.1",
+    "dayjs": "^1.11.13",
     "papaparse": "^5.5.3"
   },
   "devDependencies": {
