--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.10.1",
     "dayjs": "^1.11.13",
-    "papaparse": "^5.5.3"
+    "papaparse": "^5.5.3",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.16"
